# docker-cqpweb

./: .gitignore  Dockerfile  README.md  cwb-dev_3.5.0-1_amd64.deb  cwb_3.5.0-1_amd64.deb
.github/workflows/: publish-docker-image.yml
3.2-latest/: README.TXT  robots.txt
3.2-latest/.svn/: wc.db
3.2-latest/css/: CQPweb-green.css  CQPweb-navy.css  CQPweb-teal.css  CQPweb-user-monochrome.css  CQPweb-yellow.css  CQPweb.css
3.2-latest/doc/: CQPweb-CEQL-manual.html  CQPweb-installing-corpora.html
3.2-latest/exe/: breakdown.php  dispersion.php  distribution.php  freqlist.php  index.php  keywords.php  metadata-act.php  temp-save-act.php
3.2-latest/jsc/: dispersion.js  distribution.js  keywords.js  metadata-embiggen.js  queryhome.js  textmeta.js  useracct-create.js
3.2-latest/lib/: ceqlparser.php  (+25 more)
3.4.19/: AUTHORS  CHANGES  COPYING  INSTALL  INSTALL-WIN  Makefile  README  config.mk  definitions.mk  rpm-linux.spec
3.4.19/editline/: Announce  Make.os9  Makefile.in  README  ReadMe.cstr  ReadMe.rsalz  TEST_HISTORY  VCMakefile  acconfig.h  configure  configure.in  editline.h  editline_config.h.in  test.c  test_sh.c  vc_editline_config.h
3.4.19/editline/examples/: Makefile  TEST_HISTORY  completion_test.c
3.4.19/editline/include/: editline.h  editlineP.h  el_unix.h  el_win32.h
3.4.19/editline/man/: editline.3
3.4.19/editline/src/: editline.c  el_complete.c  el_sys_os9.c  el_sys_unix.c  el_sys_win32.c
CQPweb-3.2.43/: index.php
Perl/: Makefile  README.top
docs/: CHANGELOG.md
setup-scripts/: check_ssl_expiration  cqp_installation  example_envs.list  run_cqp
(+974 files in other folders)
